r267 (24. 10. 2024):
Added options "Drill/Saw Not Powered", "Show uses left for Ammo Bags", "Show uses left for Doctor Bags", "Show uses left for Bodybag Bags" and "Show uses left for Grenade cases"
Improved timer grouping if tracker alignment is set to horizontal and timer grouping is enabled, to preserve space
Removed option "Show Endless Assault in the Tracker", EHI will show endless assault by default
Armored Transports: Improved random loot detection in deposit boxes

r266 (10. 10. 2024):
Aggregated Health Equipment Tracker: Fixed a gap if icons are on the left side

r265 (08. 10. 2024):
Buffs: Fixed a crash on alarm
First World Bank: Fixed a load crash

r264 (07. 10. 2024):
Added proper support for Vanilla Holdout levels
Fixed Tag Team buffs not working correctly on clients
Fixed position issues in Tracker Description
Tracker Description will be on the left side when option "(Vertical) Panel Width Animation" is set to "Right to Left"
Difficulty Tracker: Enabled in Holdout to show enemy damage and health boost respectively
Enemy Counter: Disabled in Safehouse
Loot Counter: Fixed green text when all possible loot is secured and random loot bag in safe spawned after
Menu: Fixed option "(Vertical) Panel Width Animation" set to "Right to Left" not properly visible in the preview
Diamond Store: Improved random loot detection in safes
Rats Day 2: Improved random loot detection in safes

r263 (25. 09. 2024):
Cook Off: Fixed a crash
White Xmas: Fixed a crash

r262 (24. 09. 2024):
Experience Manager: Fixed a crash when visible experience are enabled in Mission Briefing only

r261 (23. 09. 2024):
Aggregated Health Equipment Tracker: Fixed visual issues
Enemy Counter: Fixed visual issues

r260 (22. 09. 2024):
Experience Manager: Fixed a possible crash

r259 (13. 09. 2024):
Updated to U240.6

r258 (12. 09. 2024):
Added color options "Snipers (Current Chance)" and "Snipers (Count)"
Rats Day 1: Fixed a crash after reaching the lab

r257 (11. 09. 2024):